# ray-tracing

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  render
.github/workflows/: render.yml
basics/: first_image.cpp
examples/: blue_to_white_gradient.cpp  firstimage.cpp
examples/experiments/mini-renderer/: README.md
examples/experiments/mini-renderer/src/: main.cpp  vec3.h
experiments/mini-renderer/: .gitignore
experiments/mini-renderer/src/: main  main.cpp  vec3.h
include/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
mini-renderer/src/: vec3.h
raytracing_in_one_weekend/: circle.h  creating_scene_rays  creating_scene_rays.cpp  firstimage  firstimage.cpp  firstimage.ppm  firstimage2  main.cpp  ray.h  render  vec3.h
raytracing_in_one_weekend/.github/workflows/: render.yml
raytracing_in_one_weekend/src/: creating_scene_rays.cpp
raytracing_in_one_weekend/vec3_class/: vec3.h
src/: main.cpp
